--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,6 +79,10 @@ dependencies = [
   "st-supabase-connection>=2.1.0",
   "st-paywall>=1.0.1",
   "stripe>=11.0.0",
+  "pdf2image>=1.17.0",
+  "pytesseract>=0.3.13",
+  "pdfplumber>=0.11.8",
+  "rapidfuzz>=3.13.0",
 ]
 
 [project.urls]
