--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ aiosqlite>=0.20.0
 beautifulsoup4>=4.13.5
 fuzzywuzzy>=0.18.0
 pandas>=2.3.1
+pytesseract>=0.3.13
+pdf2image>=1.17.0
 
 # Database support
 supabase>=2.18.1
