--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,9 @@ aiosqlite>=0.20.0
 # Data parsing
 beautifulsoup4>=4.13.5
 fuzzywuzzy>=0.18.0
+rapidfuzz>=3.13.0
 pandas>=2.3.1
+pdfplumber>=0.11.0
 pytesseract>=0.3.13
 pdf2image>=1.17.0
 
