--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@ SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_ANON_KEY=your_anon_key_here
 SUPABASE_SERVICE_KEY=your_service_key_here
 
+# Admin Configuration
+# Comma-separated list of admin emails with full access (bypasses subscriptions)
+ADMIN_EMAILS=admin@yourdomain.com,your-email@example.com
+
 # API Keys (optional for enhanced data)
 QUIVER_API_KEY=your_quiver_api_key_here
 
