feat(tooling): Add comprehensive repository analyzer
- Add scripts/analyze_repo.py for full repo health analysis
- Checks: mypy, ruff, tests, coverage, docstrings, metrics, TODOs
- Provides health score and actionable recommendations
- Can output JSON for CI integration
- Add ptt-analyze CLI entry point
- Fix mypy errors in config.py

Usage: python scripts/analyze_repo.py [--quick|--full] [--json]

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -213,3 +213,4 @@ politician-trading = "politician_trading.workflow:main"
 politician-trading-seed = "politician_trading.scripts.seed_database:main"
 politician-trading-signals = "politician_trading.signals.cli:main"
 politician-trading-trade = "politician_trading.trading.cli:main"
+ptt-analyze = "politician_trading.cli.analyze:main"
