feat: add ML-enhanced signal generation system
- Add Python ETL service with XGBoost model training and inference
- Add ML prediction API endpoints to Phoenix server (proxy to ETL)
- Integrate ML blending into trading-signals edge function (60% heuristic, 40% ML)
- Add Signal Playground page with weight controls and ML insights
- Add MLInsights component showing model metrics and feature importance
- Add mcli workflow commands for ETL deployment and ML training
- Add CORS support to Phoenix server for cross-origin requests
- Add ML database schema (ml_models, ml_training_data, ml_predictions_cache)
- ML is always enabled, falls back gracefully when no model trained
- Remove ML toggle switch from UI (now always on)

New files:
- python-etl-service/ - FastAPI service for ETL and ML
- client/src/pages/SignalPlayground.tsx - Weight experimentation UI
- client/src/components/signal-playground/ - ML insights, weight controls
- server/lib/server_web/controllers/ml_controller.ex - ML API proxy
- .mcli/workflows/etl.py - ETL and ML training commands
- supabase/migrations/20251230_ml_signal_models.sql - ML tables

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,5 +1,5 @@
 # Dockerfile for Vite React Frontend
-FROM node:18-alpine AS base
+FROM node:20-alpine AS base
 
 # Install dependencies only when needed
 FROM base AS deps
@@ -10,7 +10,7 @@ WORKDIR /app
 COPY package.json package-lock.json* ./
 
 # Install dependencies
-RUN npm ci --only=production
+RUN npm ci
 
 # Build stage
 FROM base AS builder
@@ -30,8 +30,8 @@ COPY --from=builder /app/dist /usr/share/nginx/html
 # Copy nginx configuration
 COPY nginx.conf /etc/nginx/nginx.conf
 
-# Expose port 80
-EXPOSE 80
+# Expose port 8080 (Fly.io default)
+EXPOSE 8080
 
 # Start nginx
 CMD ["nginx", "-g", "daemon off;"]
