--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -14,11 +14,11 @@ http {
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
-    gzip_proxied expired no-cache no-store private must-revalidate auth;
+    gzip_proxied any;
     gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
 
     server {
-        listen 80;
+        listen 8080;
         server_name localhost;
         root /usr/share/nginx/html;
         index index.html;
