feat(senate-etl): use Playwright to bypass anti-bot protection
- Add Playwright for browser automation (bypasses anti-bot on EFD site)
- Search all PTR disclosures using real browser session
- Parse PTR pages with session cookies via Playwright
- Handle pagination for 1600+ PTR records
- Filter electronic vs paper filings (only parse electronic)
- Update Dockerfile with Playwright/Chromium dependencies

--- a/python-etl-service/Dockerfile
+++ b/python-etl-service/Dockerfile
@@ -1,12 +1,28 @@
 # Python ETL Service for Politician Trading Tracker
-# Uses pdfplumber to extract real data from government PDFs
+# Uses pdfplumber for PDF parsing and Playwright for anti-bot protected sites
 
 FROM python:3.11-slim
 
-# Install system dependencies for pdfplumber
+# Install system dependencies for pdfplumber and Playwright
 RUN apt-get update && apt-get install -y \
     libpoppler-cpp-dev \
     poppler-utils \
+    # Playwright dependencies
+    libnss3 \
+    libnspr4 \
+    libatk1.0-0 \
+    libatk-bridge2.0-0 \
+    libcups2 \
+    libdrm2 \
+    libxkbcommon0 \
+    libxcomposite1 \
+    libxdamage1 \
+    libxfixes3 \
+    libxrandr2 \
+    libgbm1 \
+    libasound2 \
+    libpango-1.0-0 \
+    libcairo2 \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
@@ -15,6 +31,9 @@ WORKDIR /app
 # Install Python dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+
+# Install Playwright browsers (chromium only for size)
+RUN playwright install chromium
 
 # Copy application code
 COPY app ./app
