feat: add automated error report processing and signal audit system
- Add scheduled ErrorReportsJob in Phoenix to process user error reports every 4h
- Implement Ollama-powered error interpretation in Python ETL service
- Add process-error-reports edge function for on-demand processing
- Create signal audit system schema (ml_models, signal_audit_trail, etc.)
- Add comprehensive E2E tests for all major pages
- Add unit tests for components (ErrorBoundary, WalletProvider, CartContext)
- Add fetchWithRetry utility with exponential backoff
- Add AlpacaConnectionStatus component for trading health monitoring
- Add SignalLineage component for signal provenance visualization
- Add AlertContext for global notifications
- Update mcli workflows with error processing commands

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,13 +66,16 @@ dependencies = [
   "humanize>=4.9.0",
   # Scheduling
   "APScheduler==3.10.4",
-   # React UI Dependencies (managed in submodules/capital-trades/package.json)
-   # All UI dependencies are now in the React app
-   "stripe>=11.0.0",
+  # React UI Dependencies (managed in submodules/capital-trades/package.json)
+  # All UI dependencies are now in the React app
+  "stripe>=11.0.0",
   "pdf2image>=1.17.0",
   "pytesseract>=0.3.13",
   "pdfplumber>=0.11.8",
   "rapidfuzz>=3.13.0",
+  "cloudscraper>=1.2.71",
+  "curl-cffi>=0.13.0",
+  "playwright>=1.57.0",
 ]
 
 [project.urls]
