--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,6 +76,7 @@ dependencies = [
   "cloudscraper>=1.2.71",
   "curl-cffi>=0.13.0",
   "playwright>=1.57.0",
+  "fastapi>=0.128.0",
 ]
 
 [project.urls]
