Clean up top-level documents: move docs to docs/, scripts to scripts/, remove env backups and cache files

--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,10 @@ models/*.pt
 models/*.json
 !models/.gitkeep
 
+# Cache files
+*_cache.json
+house_members_cache.json
+
 # Build artifacts
 *.whl
 .build_cache/
