Added tests that were moved around.

--- a/pytest.ini
+++ b/pytest.ini
@@ -19,13 +19,11 @@ markers =
 
 # Flaky test detection
 # Automatically rerun failed tests up to 2 times
-# Install: uv pip install pytest-rerunfailures
+# Install: pip install pytest-rerunfailures
 # Usage: Tests marked with @pytest.mark.flaky will be automatically rerun
 addopts =
     --strict-markers
     --tb=short
-    --reruns 2
-    --reruns-delay 1
     -v
 
 # Coverage configuration
