--- a/.github/workflows/clawdbot.yml
+++ b/.github/workflows/clawdbot.yml
@@ -38,34 +38,36 @@ jobs:
   clawdbot-run:
     runs-on: ubuntu-latest
     timeout-minutes: 60  # Prevent runaway sessions
-    
+
+    permissions:
+      contents: write
+      issues: write
+
     # Only run on issue_comment if it's a specific trigger
     if: |
-      github.event_name != 'issue_comment' || 
+      github.event_name != 'issue_comment' ||
       contains(github.event.comment.body, '@clawdbot')
-    
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Full history for git log analysis
           token: ${{ secrets.GITHUB_TOKEN }}
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-      
+
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-          cache: 'pip'
-      
+
       - name: Install Dependencies
         run: |
-          npm ci
+          cd client && npm ci && cd ..
           pip install -r requirements.txt
       
       - name: Install Claude Code
@@ -196,17 +198,21 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 120
     if: github.event_name == 'schedule' && github.event.schedule == '0 0 * * 0'  # Sundays at midnight
-    
+
+    permissions:
+      contents: write
+      issues: write
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
-      
+
       - name: Setup Environment
         run: |
-          npm ci
+          cd client && npm ci && cd ..
           pip install -r requirements.txt
           npm install -g @anthropic-ai/claude-code
       
@@ -283,6 +289,10 @@ jobs:
     needs: [clawdbot-run]
     if: failure()
     runs-on: ubuntu-latest
+
+    permissions:
+      issues: write
+
     steps:
       - name: Create Failure Issue
         uses: actions/github-script@v7
