--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,10 +35,13 @@ dependencies = [
   "requests>=2.31.0",
   "python-dotenv>=1.1.1",
   # Async/HTTP support
-  "aiohttp>=3.9.0",
+  # SECURITY: aiohttp>=3.13.0 fixes CVE-2025-53643 (HTTP request smuggling)
+  "aiohttp>=3.13.0",
   "httpx>=0.28.1",
   "websockets>=12.0",
   "aiosqlite>=0.20.0",
+  # SECURITY: urllib3>=2.6.0 fixes CVE-2025-50181 (SSRF) and CVE-2025-66418 (DoS)
+  "urllib3>=2.6.0",
   # Data parsing
   "beautifulsoup4>=4.13.5",
   "fuzzywuzzy>=0.18.0",
@@ -77,6 +80,8 @@ dependencies = [
   "curl-cffi>=0.13.0",
   "playwright>=1.57.0",
   "fastapi>=0.128.0",
+  # Security - sandboxed code execution
+  "RestrictedPython>=6.1",
 ]
 
 [project.urls]
