feat(client): Add safe storage utilities and configurable support email
- Create client/src/lib/safeStorage.ts with error-handling localStorage:
  - safeGetItem(), safeSetItem(), safeRemoveItem() with try/catch
  - safeGetKeys() using localStorage.key() for proper iteration
  - safeClearByPrefix() for batch removal (used for auth cleanup)
  - safeGetJSON(), safeSetJSON() with serialization error handling
- Add 15 tests in safeStorage.test.ts
- Update Header.tsx to use safeClearByPrefix('sb-') for sign-out
- Update RootErrorBoundary.tsx to use VITE_SUPPORT_EMAIL env var
  instead of hardcoded personal email
- Add VITE_SUPPORT_EMAIL to .env.production.example
- Add localStorage mock to test setup for jsdom compatibility

--- a/client/.env.production.example
+++ b/client/.env.production.example
@@ -25,3 +25,6 @@ VITE_ENABLE_ANALYTICS=false
 # Security
 VITE_CSP_ENABLED=true
 VITE_HSTS_ENABLED=true
+
+# Support Contact
+VITE_SUPPORT_EMAIL=support@govmarket.trade
