chore: update gitignore and remove transient artifacts
- Add .ralph/ agent state files to gitignore
- Add client/test-results/ Playwright artifacts to gitignore
- Remove tracked test-results and .ralph files from repo
- Update CLAUDE.md with mcli workflow learning note

--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,11 @@ analytics.json
 
 # Sample PDFs for testing
 sample_pdfs/
+
+# Playwright test results
+client/test-results/
+client/playwright-report/
+client/playwright/.cache/
+
+# Agent state files
+.ralph/
