--- a/.ralphrc
+++ b/.ralphrc
@@ -29,3 +29,15 @@ BEADS_FILTER="status:open"
 CB_NO_PROGRESS_THRESHOLD=3
 CB_SAME_ERROR_THRESHOLD=5
 CB_OUTPUT_DECLINE_THRESHOLD=70
+
+# Feature branch workflow settings
+FEATURE_BRANCH_AUTO_PR=true
+FEATURE_BRANCH_AUTO_MERGE=true
+FEATURE_BRANCH_MERGE_STRATEGY="squash"
+FEATURE_BRANCH_DELETE_AFTER_MERGE=true
+FEATURE_BRANCH_BASE="main"
+
+# GitHub issue polling settings
+GITHUB_ISSUE_POLLING=true
+GITHUB_ISSUE_POLL_LIMIT=20
+GITHUB_ISSUE_PRIORITY_LABELS="bug,ralph-task,critical,P0,P1"
