--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,66 +7,13 @@ on:
     branches: [ main, develop ]
 
 jobs:
-  test:
-    runs-on: ${{ matrix.os }}
-    continue-on-error: true  # Non-blocking until linting/testing issues are fixed
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, macos-latest]
-        python-version: ['3.9', '3.10', '3.11', '3.12']
-
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -e ".[dev]"
-
-    - name: Lint with ruff
-      run: |
-        ruff check src/ tests/
-      continue-on-error: true
-
-    - name: Format check with black
-      run: |
-        black --check src/ tests/
-      continue-on-error: true
-
-    - name: Type check with mypy
-      run: |
-        mypy src/
-      continue-on-error: true
-
-    - name: Run unit tests
-      run: |
-        pytest tests/unit/ -v --cov=src/politician_trading --cov-report=xml --cov-report=html
-      continue-on-error: true
-
-    - name: Run pipeline tests
-      run: |
-        pytest tests/pipeline/ -v
-      continue-on-error: true
-
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v4
-      with:
-        file: ./coverage.xml
-        fail_ci_if_error: false
-      continue-on-error: true
-
-  integration-tests:
-    name: Integration Tests
+  # Python ETL Service Tests
+  etl-tests:
+    name: ETL Service Tests
     runs-on: ubuntu-latest
-    continue-on-error: true  # Non-blocking
-    if: always()  # Run even if test job fails
-    needs: test
+    defaults:
+      run:
+        working-directory: python-etl-service
 
     steps:
     - uses: actions/checkout@v4
@@ -79,91 +26,90 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -e ".[dev]"
+        pip install pytest pytest-asyncio pytest-cov pytest-mock
+        pip install -r requirements.txt
+      continue-on-error: true
 
-    - name: Run integration tests
+    - name: Run ETL tests
       run: |
-        # Skip tests that require mcli-framework or have async issues in CI
-        pytest tests/integration/ -v -s --tb=short \
-          --ignore=tests/integration/test_california_scraper.py \
-          --ignore=tests/integration/test_congress_scraper.py \
-          --ignore=tests/integration/test_politician_trading.py \
-          --ignore=tests/integration/test_uk_scraper.py \
-          --ignore=tests/integration/test_us_states_scraper.py \
-          --ignore=tests/integration/test_scraper_diagnostics.py
+        pytest tests/ -v --tb=short
+      continue-on-error: true
       env:
-        # Mock Alpaca keys for testing (not real keys)
-        ALPACA_PAPER_API_KEY: PKTEST1234567890
-        ALPACA_PAPER_SECRET_KEY: test_secret_key_12345
+        SUPABASE_URL: ${{ secrets.SUPABASE_URL || 'https://test.supabase.co' }}
+        SUPABASE_KEY: ${{ secrets.SUPABASE_KEY || 'test-key' }}
 
-  e2e-tests:
-    name: End-to-End Trading Flow Tests
+  # React Client Tests
+  client-tests:
+    name: Client Tests
     runs-on: ubuntu-latest
-    continue-on-error: true  # Non-blocking
-    if: always()  # Run even if test job fails
-    needs: test
+    defaults:
+      run:
+        working-directory: client
 
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
       with:
-        python-version: '3.11'
+        node-version: '20'
+        cache: 'npm'
+        cache-dependency-path: client/package-lock.json
 
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -e ".[dev]"
+      run: npm ci
 
-    - name: Run E2E trading flow test
-      run: |
-        pytest tests/integration/test_e2e_trading_flow.py -v -s --tb=short
-      env:
-        # Mock Alpaca keys for testing (not real keys)
-        ALPACA_PAPER_API_KEY: PKTEST1234567890
-        ALPACA_PAPER_SECRET_KEY: test_secret_key_12345
+    - name: Run tests
+      run: npm test -- --run
 
-    - name: Run advanced E2E scenarios
-      run: |
-        pytest tests/integration/test_e2e_advanced_scenarios.py -v -s --tb=short -m "not real_alpaca"
-      env:
-        # Mock Alpaca keys for testing (not real keys)
-        ALPACA_PAPER_API_KEY: PKTEST1234567890
-        ALPACA_PAPER_SECRET_KEY: test_secret_key_12345
+    - name: Build
+      run: npm run build
 
-    - name: Generate E2E test report
-      if: always()
-      run: |
-        pytest tests/integration/test_e2e_*.py --junitxml=e2e-test-report.xml -m "not real_alpaca"
-
-    - name: Upload E2E test results
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: e2e-test-results
-        path: e2e-test-report.xml
-
-  build:
+  # Elixir Phoenix Server Tests
+  server-tests:
+    name: Server Tests
     runs-on: ubuntu-latest
-    if: always()  # Run even if tests fail
-    needs: [test, integration-tests, e2e-tests]
+    defaults:
+      run:
+        working-directory: server
 
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
+    - name: Set up Elixir
+      uses: erlef/setup-beam@v1
       with:
-        python-version: '3.11'
+        elixir-version: '1.14'
+        otp-version: '25'
 
-    - name: Build package
+    - name: Restore dependencies cache
+      uses: actions/cache@v4
+      with:
+        path: server/deps
+        key: ${{ runner.os }}-mix-${{ hashFiles('server/mix.lock') }}
+        restore-keys: ${{ runner.os }}-mix-
+
+    - name: Install dependencies
+      run: mix deps.get
+
+    - name: Run tests
+      run: mix test
+      continue-on-error: true
+
+  # Build Summary
+  build-summary:
+    name: Build Summary
+    runs-on: ubuntu-latest
+    needs: [etl-tests, client-tests, server-tests]
+    if: always()
+
+    steps:
+    - name: Check test results
       run: |
-        python -m pip install --upgrade pip build
-        python -m build
-
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: dist
-        path: dist/
+        echo "## CI/CD Pipeline Summary" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "| Component | Status |" >> $GITHUB_STEP_SUMMARY
+        echo "|-----------|--------|" >> $GITHUB_STEP_SUMMARY
+        echo "| ETL Service | ${{ needs.etl-tests.result }} |" >> $GITHUB_STEP_SUMMARY
+        echo "| React Client | ${{ needs.client-tests.result }} |" >> $GITHUB_STEP_SUMMARY
+        echo "| Phoenix Server | ${{ needs.server-tests.result }} |" >> $GITHUB_STEP_SUMMARY
