feat: Add fuzzy name matching and QuiverQuant fallback for bioguide enrichment
- Add thefuzz dependency for fuzzy string matching
- Remove currentMember filter to fetch historical Congress members
- Implement fuzzy matching with confidence scoring (85 threshold)
- Add QuiverQuant API as fallback source for bioguide_ids
- Enhance find_or_create_politician to lookup/store bioguide_id
- Match score included in results for transparency

This fixes matching issues like:
- "Richard W. Allen" vs "Richard Allen" (93% match)
- "Hon. April McClain Delaney" vs "April McClain-Delaney" (100% match)

--- a/python-etl-service/requirements.txt
+++ b/python-etl-service/requirements.txt
@@ -26,6 +26,10 @@ supabase>=2.3.0
 pandas>=2.1.0
 numpy>=1.24.0
 
+# Fuzzy string matching
+thefuzz>=0.22.0
+python-Levenshtein>=0.25.0
+
 # Date handling
 python-dateutil>=2.8.2
 
