--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ dependencies = [
   # Data parsing
   "beautifulsoup4>=4.13.5",
   "fuzzywuzzy>=0.18.0",
+  "thefuzz>=0.22.0",
   "pandas>=2.3.1",
   # Database support
   "supabase>=2.18.1",
