fix: Use lsh sync pull with CID for CI secrets retrieval
lsh pull fails in CI because the fresh IPFS daemon has no cached
environment data. Switch to lsh sync pull with explicit CID to
pull encrypted secrets directly from IPFS.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -164,7 +164,7 @@ jobs:
     - name: Pull secrets via lsh
       env:
         LSH_SECRETS_KEY: ${{ secrets.LSH_SECRETS_KEY }}
-      run: lsh pull
+      run: lsh sync pull QmTCuo9F4hhJupvYyCARgTSS9TjU1svXtovU696tZPDtCZ
 
     - name: Install Flyctl
       uses: superfly/flyctl-actions/setup-flyctl@master
