fix: Create fly symlink for flyctl in CI deploy job
services.sh uses 'fly' command but the flyctl action installs as
'flyctl'. The zsh subprocess launched by mcli can't find 'fly'.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -156,6 +156,9 @@ jobs:
     - name: Install Flyctl
       uses: superfly/flyctl-actions/setup-flyctl@master
 
+    - name: Create fly symlink
+      run: ln -sf "$(which flyctl)" /usr/local/bin/fly
+
     - name: Deploy all services
       env:
         FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
